@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.108 2003/08/12 05:09:08 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.109 2003/08/16 20:03:02 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -2150,3 +2150,9 @@ usr.bin/menuc/menu_sys.def		1.25 via patch
 	Improve a parameter list, add the actual documentation for menuc.
 	To make sysinst compile.
 	[masanobu, ticket #65]
+
+sys/arch/i386/i386/machdep.c		1.529 via patch
+
+	fixes a longstanding bug in stack address calculation in "upcalls"
+	from vm86 mode.
+	[drochner, ticket #72]
